syntax = "proto3";

package ingester.v1;

import "common/v1/common.proto";
import "push/v1/push.proto";

service IngesterService {
  rpc Push(push.v1.PushRequest) returns (push.v1.PushResponse) {}
  rpc LabelValues(LabelValuesRequest) returns (LabelValuesResponse) {}
  rpc LabelNames(LabelNamesRequest) returns (LabelNamesResponse) {}
  rpc ProfileTypes(ProfileTypesRequest) returns (ProfileTypesResponse) {}
  rpc Series(SeriesRequest) returns (SeriesResponse) {}
  rpc Flush(FlushRequest) returns (FlushResponse) {}

  // Todo(ctovena) we might want to batch stream profiles & symbolization instead of sending them all at once.
  // but this requires to ensure we have correct timestamp and labels ordering.
  rpc SelectProfiles(SelectProfilesRequest) returns (SelectProfilesResponse) {}
}

message LabelValuesRequest {
  string name = 1;
}

message LabelValuesResponse {
  repeated string names = 1;
}

message LabelNamesRequest {}

message LabelNamesResponse {
  repeated string names = 1;
}

message ProfileTypesRequest {}

message ProfileTypesResponse {
  repeated common.v1.ProfileType profile_types = 1;
}

message SeriesRequest {
  repeated string matchers = 1;
}

message SeriesResponse {
  repeated common.v1.Labels labels_set = 2;
}

message FlushRequest {}

message FlushResponse {}

message SelectProfilesRequest {
  string label_selector = 1;
  common.v1.ProfileType type = 2;
  int64 start = 3;
  int64 end = 4;
}

message SelectProfilesResponse {
  repeated Profile profiles = 1;
  repeated string function_names = 2;
}

// Profile represents a point in time profile.
message Profile {
  // The ID of the profile.
  string ID = 1;
  // The name and type of the profile.
  common.v1.ProfileType type = 2;
  // LabelPair is the key value pairs to identify the corresponding profile
  repeated common.v1.LabelPair labels = 3;
  // Timestamp is when that profile was created
  int64 timestamp = 4;
  // The list of stracktraces for the profile with their respective value
  repeated StacktraceSample stacktraces = 5;
}

message StacktraceSample {
  repeated int32 function_ids = 1;
  int64 value = 2;
}
